Updated jpa repository to h2 from derby, Added spring devtools

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,7 +1,14 @@
 #tomcat configurations
 server:
   port: 8082
-  
+
+spring:
+  h2:
+    console:
+      enabled: true
+  jpa:
+    show-sql: true
+
 #spring boot actuator configurations
 management:
   endpoint:
