--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -14,6 +14,11 @@ spring:
   # configuring basename here instead of @Bean config for ResourceBundleMessageSource
   messages:
     basename: messages
+  # by default the username will be "user" and password will be generated and printed in console
+  security:
+    user:
+      name: username
+      password: password
 
 #spring boot actuator configurations
 management:
