--- a/build.gradle
+++ b/build.gradle
@@ -6,6 +6,7 @@ plugins {
     id 'org.springframework.boot' version '2.1.1.RELEASE'
     id 'io.spring.dependency-management' version '1.0.11.RELEASE'
     id 'java'
+    id 'jacoco'
 }
 
 group = 'in.hp.java'
@@ -36,3 +37,6 @@ dependencies {
 
     testImplementation 'org.springframework.boot:spring-boot-starter-test:2.1.1.RELEASE'
 }
+
+test.finalizedBy(jacocoTestReport)
+jacocoTestReport.dependsOn test
